// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`table should print a table with center alignment: table with center alignment 1`] = `
"
head0  head1  head2
  1      22    333
"
`;

exports[`table should print a table with default alignment: table with default alignment 1`] = `
"
head0  head1  head2
1      22     333
"
`;

exports[`table should print a table with right alignment: table with right alignment 1`] = `
"
head0  head1  head2
    1     22    333
"
`;
